--- a/nerdle/src/index.html
+++ b/nerdle/src/index.html
@@ -5,7 +5,7 @@
   <title>Nerdle</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/professional_kermit.jpeg">
 </head>
 <body>
   <app-root>Nerdle</app-root>
